--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Todo wallpaper app for desktop",
   "main": "main.js",
   "scripts": {
+    "electron": "electron .",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
