--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     }
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "electron-squirrel-startup": "^1.0.1",
     "express": "^4.21.2",
