--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "electron-store": "^8.2.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0",
     "nodemon": "^3.1.9"
   }
 }
